<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.RegisterActivity">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="360dp"
        android:layout_height="251dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.033"
        app:srcCompat="@drawable/students_meeting" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="314dp"
        android:layout_height="48dp"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/style_spinner"
        android:paddingStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/isic_number"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/username"
        android:layout_width="314dp"
        android:layout_height="48dp"
        android:layout_marginTop="276dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingStart="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,RtlSymmetry" />

    <EditText
        android:id="@+id/email"
        android:layout_width="314dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="10dp"
        android:hint="@string/email1"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        tools:ignore="Autofill,RtlSymmetry" />

    <EditText
        android:id="@+id/password"
        android:layout_width="314dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="10dp"
        android:hint="@string/password1"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:ignore="Autofill,RtlSymmetry" />

    <EditText
        android:id="@+id/isic_number"
        android:layout_width="314dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/baseline_credit_card_24"
        android:drawablePadding="10dp"
        android:hint="@string/isic"
        android:inputType="text"
        android:paddingStart="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:ignore="Autofill,RtlSymmetry" />

    <Button
        android:id="@+id/registration_button"
        android:layout_width="263dp"
        android:layout_height="49dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_input"
        android:text="@string/registration"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <TextView
        android:id="@+id/link_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/have_an_account_click_here"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration_button"
        app:layout_constraintVertical_bias="0.594" />

    <ImageView
        android:layout_width="135dp"
        android:layout_height="107dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/meetup"
        tools:ignore="ContentDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>